fixed random whitespace

--- a/public/style.css
+++ b/public/style.css
@@ -74,7 +74,6 @@ thead {
 	text-align:center;
 }
 tbody {
-	height:100%;
 	overflow:auto;
 	overflow-x:hidden;
 	display:block;
